--- a/SquiLu/sq/Makefile
+++ b/SquiLu/sq/Makefile
@@ -15,9 +15,24 @@ SRCS= sq.c
 sq32:
 	g++ -O2 -s -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
 
+sq32i64:
+	g++ -g -D_SQ64 -O2 -o $(OUT)32i64 $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+
+sq32dbg:
+	g++ -g -m32 -s -o $(OUT)dbg $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+
 sqprof:
-	g++ -O2 -pg  -pie -gstabs -g3 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+	#g++ -O2 -pg  -pie -gstabs -g3 -o $(OUT)-profile $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+	g++ -O2 -pg -g -fno-exceptions -fno-rtti -gstabs -g3 -o $(OUT)-profile $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
 	
 sq64:
-	g++ -O2 -s -m64 -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+	g++ -O3 -s -m64 -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
 #	g++ -g -m64 -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+
+sq64p:
+	g++ -fpack-struct -march=native -O3 -s -m64 -D_SQ64 -o $(OUT)-packed $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+#	g++ -g -m64 -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+
+sq64dbg:
+	g++ -g -o $(OUT)dbg $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+
