--- a/SquiLu/Makefile-SquiLu-ios
+++ b/SquiLu/Makefile-SquiLu-ios
@@ -2,7 +2,7 @@ MYDEVPREFIX=/var/theos/sdks/iPhoneOS8.1.sdk/usr
 
 #INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I/usr/include/postgresql -I/usr/lib/jvm/default-java/include -I/usr/lib/llvm-3.1/include -I../SquiLu-ext/threadObject -I..
 #INC =  -Iinclude -Isqstdlib -I../myaxtls -I../discount -I..
-INC = -I$(MYDEVPREFIX)/include -I$(MYDEVPREFIX)/include/c++/4.2.1 -Iinclude -Isqstdlib -I../myaxtls -I../discount -I../gumbo -I.. -I../minizip \
+INC = -I$(MYDEVPREFIX)/include -I$(MYDEVPREFIX)/include/c++/4.2.1 -Iinclude -Isqstdlib -Isquirrel -I../myaxtls -I../discount -I../gumbo -I.. -I../minizip \
     -I/usr/include/mysql -I/usr/include/postgresql -I../unql/src
 #CFLAGS =  -Wall -fno-strict-aliasing -DSQ_JIT_LLVM44=1 -D_DEBUG_DUMP33=1 -DWITH_DAD_EXTRAS=1 -DSQ_SUBLATIN=1 -DNEED_SUBLATIN_C2=1 -DSQUSEDOUBLE=1 -DSQUSEDECIMAL64x=1 -DNO_EXCEPTION_KEY_NOT_FOUND0=1 -D_SQ642=1 -DNO_GARBAGE_COLLECTOR00=1 -DSQLITE_DEFAULT_FILE_FORMAT=4 -DSQLITE_DEFAULT_AUTOVACUUM=1 -DSQLITE_DEFAULT_FOREIGN_KEYS=1 -DSQLITE_ENABLE_COLUMN_METADATA=1 -DSQLITE_ENABLE_EXTENSION_FUNCTIONS=1 -DSQLITE_ENABLE_FTS3=1 -DSQLITE_ENABLE_FTS3_PARENTHESIS=1 -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 -DSQLITE_ENABLE_RTREE=1 -DSQLITE_ENABLE_STAT3=1 -DSQLITE_HAS_CODEC=1 -DSQLITE_OMIT_TCL_VARIABLE=1 -DSQLITE_USE_URI=1 -DSQLITE_SOUNDEX=1 -DNO_POPEN=1 -DNO_SSL_DL=1 -DHAVE_STDINT=1 -DUSE_AXTLS=1 -DUSE_AXTLS_ON_MEMORY=1 -D_FILE_OFFSET_BITS=64 -DSSL_STATIC_LIBRARY=1 -DPDF_USING_ZLIB=1 -DRS232_STATIC=1
 CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
@@ -30,6 +30,7 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQLITE_ENABLE_EXTENSION_FUNCTIONS=1 \
     -DSQLITE_ENABLE_FTS3_PARENTHESIS=1 \
     -DSQLITE_ENABLE_FTS4=1 \
+    -DSQLITE_ENABLE_FTS5=1 \
     -DSQLITE_ENABLE_RTREE=1 \
     -DSQLITE_ENABLE_STAT4=1 \
     -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 \
@@ -37,6 +38,7 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQLITE_OMIT_TCL_VARIABLE=1 \
     -DSQLITE_SOUNDEX=1 \
     -DSQLITE_USE_URI=1 \
+    -DUSE_BITVECTOR=1 \
     -DSQ_SUBLATIN=1 \
     -DSQUSEDECIMAL64x=1 \
     -DSQUSEDOUBLE=1 \
@@ -50,11 +52,18 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DWITH_MPDECIMAL=1 \
     -DWITH_MYSQL2=1 \
     -DWITH_POSTGRESQL2=1 \
-    -DWITH_UUID=1
+    -DWITH_UUID=1 \
+    -DSQLITE_ENABLE_JSON1=1 \
+    -DSQLITE_OMIT_PREPARED=1 \
+    -DTARGET_IOS=1 -DWITHOUTH_SHA512=1 \
+    -DSQ_USE_MKSTEMP=1 \
+    -DSQ_USE_LOCALTIME_R=1 \
+    -DSQ_ENABLE_INCLUDES=1 \
+    -DSLAVE_VM_WITH_OS_THREADS=1
 
 RESINC = 
 #LIBDIR =  -Llib -L../myaxtls -L../mpdecimal -L../discount
-LIBDIR = -L$(MYDEVPREFIX)/lib -L$(MYDEVPREFIX)/lib/system -Llib -L../myaxtls -L../mpdecimal -L../discount -L../gumbo -L../minizip -L../unql
+LIBDIR = -L$(MYDEVPREFIX)/lib -L$(MYDEVPREFIX)/lib/system -Llib -L../myaxtls -L../mpdecimal -L../gumbo -L../minizip -L../unql
 LIB =  -lm
 #LDFLAGS =  -lpthread -lrt -ldl -laxtls -lmpdecimal -ldiscount -lz
 #LDFLAGS =  -lpthread -lrt -ldl -luuid -laxtls -lmpdecimal -ldiscount -lgumbo -lminizip -lz -lunql
@@ -72,29 +81,28 @@ SOURCES= sq/sq.c  \
     sqstdlib/sqstdstring.cpp  \
     sqstdlib/sqstdsystem.cpp  \
     ../SquiLu-ext/dynamic_library.cpp  \
-    ../SquiLu-ext/fpdf.cpp  \
     ../SquiLu-ext/lua_socket.cpp  \
     ../SquiLu-ext/mongoose.c  \
-    ../SquiLu-ext/pdf-font.cpp  \
     ../SquiLu-ext/sq_axtls.c  \
     ../SquiLu-ext/sq_base64.cpp  \
-    ../SquiLu-ext/sq_fpdf.cpp  \
+    ../SquiLu-ext/sq_bitvector.cpp  \
+    ../SquiLu-ext/dad_utils.cpp  \
     ../SquiLu-ext/sq_fs.c  \
     ../SquiLu-ext/sq_gumbo.cpp  \
     ../SquiLu-ext/sqlite3.c  \
     ../SquiLu-ext/sq_unql.c  \
     ../SquiLu-ext/sq_decimal.c  \
     ../SquiLu-ext/sq_markdown.cpp  \
-    ../SquiLu-ext/sq_mix.c \
+    ../SquiLu-ext/sq_mix.cpp \
     ../SquiLu-ext/sq_mongoose.cpp  \
     ../SquiLu-ext/sq_pack.cpp  \
     ../SquiLu-ext/sq_mysql.cpp  \
     ../SquiLu-ext/sq_postgresql.cpp  \
     ../SquiLu-ext/sqratimport.cpp  \
-    ../SquiLu-ext/sq_rs232.c  \
     ../SquiLu-ext/sq_slave_vm.cpp  \
     ../SquiLu-ext/sq_socket.cpp  \
     ../SquiLu-ext/sq_sqlite3.cpp  \
+    ../SquiLu-ext/sq_bitvector.cpp  \
     ../SquiLu-ext/sq_tinyxml2.cpp  \
     ../SquiLu-ext/sq_zlib.cpp  \
     ../SquiLu-ext/tinyxml2.cpp \
@@ -109,6 +117,7 @@ SOURCES= sq/sq.c  \
     squirrel/sqdebug.cpp  \
     squirrel/sqfuncstate.cpp  \
     squirrel/sqlexer.cpp  \
+    squirrel/sq_lexer.cpp  \
     squirrel/sqmem.cpp  \
     squirrel/sqobject.cpp  \
     squirrel/sqstate.cpp  \
@@ -116,6 +125,21 @@ SOURCES= sq/sq.c  \
     squirrel/sqvm.cpp  \
     squirrel/sublatin.c
 
+#    ../SquiLu-ext/sq_rs232.c  \
+#    ../SquiLu-ext/pdf-font.cpp  \
+#    ../SquiLu-ext/fpdf.cpp  \
+#    ../SquiLu-ext/sq_fpdf.cpp  \
+
+LIBDISCOUNT_PATH := ../md4c
+LIBDISCOUNT_SRC_FILES= \
+	../SquiLu-ext/sq_markdown.cpp  \
+	$(LIBDISCOUNT_PATH)/md4c/md4c.c \
+	$(LIBDISCOUNT_PATH)/md2html/entity.c \
+	$(LIBDISCOUNT_PATH)/md2html/render_html.c
+	
+LIBDISCOUNT_INCLUDE_DIRS := -I$(LIBDISCOUNT_PATH)/md4c -I$(LIBDISCOUNT_PATH)/md2html
+SOURCES += $(LIBDISCOUNT_SRC_FILES)
+CFLAGS += -DMD4C_USE_UTF8 $(LIBDISCOUNT_INCLUDE_DIRS)
 	
 #SOURCES += ../SquiLu-ext/sq_fltk.cpp  ../SquiLu-ext/sq_parsecsv.cpp \
 #	../SquiLu-ext/sq_postgresql.cpp ../SquiLu-ext/sq_zmq3.cpp  
