Omit codec extension

--- a/SquiLu/Makefile-SquiLu
+++ b/SquiLu/Makefile-SquiLu
@@ -33,7 +33,7 @@ CFLAGS = $(INC) -O3 -Wall -fno-strict-aliasing  \
     -DSQLITE_ENABLE_RTREE=1 \
     -DSQLITE_ENABLE_STAT4=1 \
     -DSQLITE_ENABLE_UNLOCK_NOTIFY=1 \
-    -DSQLITE_HAS_CODEC=1 \
+    -DSQLITE_HAS_CODECx=1 \
     -DSQLITE_OMIT_TCL_VARIABLE=1 \
     -DSQLITE_SOUNDEX=1 \
     -DSQLITE_USE_URI=1 \
